# vms-smu

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  adminclient.md  build-ingest.ps1  clientemonitoring.md  config.example.toml  deny.toml  instruct.md  intrucao1.md  rust-toolchain.toml  test_output.txt  vms.ps1
apps/vms-admin/: package-lock.json  package.json  tsconfig.json
apps/vms-admin/src/: App.css  App.tsx  CamerasPageDigifort.tsx
apps/vms-admin/src-tauri/: Cargo.toml  tauri.conf.json
apps/vms-admin/src-tauri/src/: lib.rs  main.rs
apps/vms-viewer/: package-lock.json  package.json  vite.config.ts
apps/vms-viewer/src/: App.css  App.tsx
apps/vms-viewer/src-tauri/: Cargo.toml  tauri.conf.json
apps/vms-viewer/src-tauri/src/: lib.rs  main.rs
clients/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
clients/web/src/: App.tsx  index.css  index.tsx
clients/web/src/pages/: Config.tsx  Events.tsx  Evidence.tsx  Live.tsx  Login.tsx  Playback.tsx
clients/web/src/services/: api.ts  index.ts  playback.ts  websocket.ts
clients/web/src/stores/: auth.tsx  camera.tsx  config.tsx  events.ts  index.ts
clients/web/src/types/: camera.ts  event.ts  evidence.ts  index.ts
crates/vms_core/: Cargo.toml
crates/vms_core/src/: auth.rs  camera.rs  error.rs  lib.rs  node.rs  session.rs  webrtc_types.rs
crates/vms_node/: Cargo.toml
crates/vms_node/src/: config.rs  main.rs  pipeline.rs  routes.rs  server_client.rs
crates/vms_server/: Cargo.toml
crates/vms_server/src/: config.rs  main.rs  state.rs
crates/vms_server/src/db/: camera_repository.rs  mod.rs  node_repository.rs  refresh_token_repository.rs  repository.rs  session_repository.rs  user_repository.rs
crates/vms_server/src/middleware/: auth_middleware.rs  mod.rs
crates/vms_server/src/routes/: auth.rs  cameras.rs  mjpeg.rs  mod.rs  nodes.rs  sessions.rs  webrtc.rs
crates/vms_server/src/services/: auth_service.rs  mod.rs  orchestrator.rs
crates/vms_server/src/webrtc/: mod.rs  state.rs  stream.rs
deploy/compose/: docker-compose.infrastructure.yml  docker-compose.monitoring.yml  docker-compose.yml
deploy/docker/: Dockerfile.vms-ai  Dockerfile.vms-api  Dockerfile.vms-ingest  Dockerfile.vms-storage  Dockerfile.vms-stream
docs/: AI_SETUP.md  CHANGELOG_FRONTEND_FIXES.md  COMPARISON_DIGIFORT_VS_VMS.md  CONTRIBUTING.md  DIGIFORT_COMPARISON.md  FRONTEND_ADAPTATION_PLAN.md  FRONTEND_ARCHITECTURE.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  PHASE1_IMPLEMENTATION_PLAN.md  PROGRESS.md  PROGRESS_SPRINT1.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  SUMMARY.md
docs/architecture/: README.md  adr-template.md
libs/vms-common/: Cargo.toml
libs/vms-common/src/: analytics.rs  camera.rs  config.rs  error.rs  event.rs  layout.rs  lib.rs  lpr.rs  map.rs  media_profile.rs  playback.rs  ptz.rs  schedule.rs  stream.rs  types.rs  user.rs  webrtc.rs
libs/vms-format/: Cargo.toml
libs/vms-format/src/: events.rs  index.rs  lib.rs
libs/vms-proto/: Cargo.toml
libs/vms-proto/src/: lib.rs
libs/vms-telemetry/: Cargo.toml
libs/vms-telemetry/src/: lib.rs  metrics.rs  tracing.rs
monitoring/alertmanager/: alertmanager.yml
monitoring/loki/: loki.yml
monitoring/otel/: otel-collector.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/alerts/: vms-alerts.yml
monitoring/tempo/: tempo.yml
scripts/: build-all.sh  run-services.sh  setup-dev.ps1  setup-dev.sh  start-infrastructure.sh  stop-services.sh
services/vms-ai/: Cargo.toml
services/vms-ai/src/: detector.rs  main.rs  nats_consumer.rs  tracker.rs
services/vms-analytics/: Cargo.toml
services/vms-analytics/src/: analytics.rs  main.rs
services/vms-api/: Cargo.toml
services/vms-api/src/: main.rs  recording_manager.rs
services/vms-api/src/db/: camera_repository.rs  mod.rs  server_repository.rs  user_repository.rs
services/vms-api/src/models/: camera.rs  mod.rs  server.rs  user.rs
services/vms-api/src/routes/: auth.rs  cameras.rs  cameras_v2.rs  filesystem.rs  mjpeg.rs  mod.rs  onvif.rs  recordings.rs  servers.rs  streams.rs  webrtc.rs
services/vms-auth/: Cargo.toml
services/vms-auth/src/: jwt.rs  main.rs  middleware_auth.rs  password.rs  permission.rs  role.rs  user.rs
services/vms-events/: Cargo.toml
services/vms-events/src/: alarm.rs  event.rs  main.rs  rule.rs
services/vms-evidence/: Cargo.toml
services/vms-evidence/src/: evidence.rs  export.rs  main.rs
services/vms-face/: Cargo.toml
services/vms-face/src/: face.rs  main.rs
services/vms-gateway/: Cargo.toml
services/vms-gateway/src/: main.rs
services/vms-ingest/: Cargo.toml
services/vms-ingest/src/: api_client.rs  camera_manager.rs  main.rs  metrics.rs  nats_publisher.rs  pipeline.rs
services/vms-ingest/src/onvif/: auth.rs  device.rs  discovery.rs  media.rs  mod.rs  ptz.rs
services/vms-lpr/: Cargo.toml
services/vms-lpr/src/: lpr.rs  main.rs
services/vms-onvif/: Cargo.toml
services/vms-onvif/examples/: test_camera.rs  test_debug.rs  test_full_onvif.rs  test_tapo_c100.rs
services/vms-onvif/src/: camera.rs  client.rs  device.rs  digest_auth.rs  discovery.rs  lib.rs  main.rs  xml_utils.rs
services/vms-player/: Cargo.toml
services/vms-player/src/: main.rs
services/vms-replicator/: Cargo.toml
services/vms-replicator/src/: main.rs
services/vms-storage/: Cargo.toml
services/vms-storage/src/: export.rs  indexer.rs  main.rs  nats_consumer.rs  playback.rs  recorder.rs  retention.rs  storage.rs  writer.rs
services/vms-storage/src/playback/: bookmark.rs  mod.rs  streamer.rs  timeline.rs
services/vms-storage/src/routes/: mod.rs  playback.rs
services/vms-stream/: Cargo.toml
services/vms-stream/src/: gstreamer_webrtc.rs  main.rs  nats_consumer.rs  srt_server.rs  webrtc_server.rs
web-client/: index.html  package-lock.json  package.json  vite.config.ts
web-client/src/: App.tsx  index.tsx
web-client/src/components/: CameraGrid.tsx  CameraTile.tsx  Header.tsx  Sidebar.tsx  Timeline.tsx
web-client/src/services/: webrtc.ts
web-client/src/styles/: index.css
(+11 files in other folders)
