[package]
name = "vms-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vms-api"
path = "src/main.rs"

[dependencies]
vms-common = { path = "../../libs/vms-common" }

tokio = { workspace = true }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# ONVIF support
url = "2"
urlencoding = "2"
bytes = "1"
futures = "0.3"
async-stream = "0.3"
lazy_static = "1.4"

# Password hashing
argon2 = "0.5"
rand = "0.8"
