[package]
name = "vms-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vms-auth"
path = "src/main.rs"

[dependencies]
vms-common = { path = "../../libs/vms-common" }

# Async
tokio = { workspace = true }

# Web
axum = { workspace = true }
tower = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Security
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
