[package]
name = "vms-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vms-ingest"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
vms-common = { path = "../../libs/vms-common" }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }

# Media Pipeline
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
gstreamer-video = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
config = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Messaging
async-nats = { workspace = true }

# ONVIF
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
quick-xml = { version = "0.31", features = ["serialize"] }
roxmltree = "0.19"
base64 = "0.21"
md5 = "0.7"
rand = "0.8"
sha1 = "0.10"

[dev-dependencies]
proptest = { workspace = true }
