[package]
name = "vms-replicator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vms-replicator"
path = "src/main.rs"

[dependencies]
vms-common = { path = "../../libs/vms-common" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
