[package]
name = "vms-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vms-storage"
path = "src/main.rs"

[dependencies]
vms-common = { path = "../../libs/vms-common" }
vms-format = { path = "../../libs/vms-format" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
rocksdb = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = "3"
