[package]
name = "vms-storage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vms-storage"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Messaging
async-nats = "0.33"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }

# Video processing
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Shared
vms-common = { path = "../../libs/vms-common" }
