[package]
name = "vms-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vms-stream"
path = "src/main.rs"

[dependencies]
vms-common = { path = "../../libs/vms-common" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
webrtc = { workspace = true }
async-nats = { workspace = true }
chrono = { workspace = true }
