[package]
name = "vms-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vms-stream"
path = "src/main.rs"

[dependencies]
vms-common = { path = "../../libs/vms-common" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
async-nats = { workspace = true }
chrono = { workspace = true }

# GStreamer for ultra-low latency WebRTC
gstreamer = "0.22"
gstreamer-webrtc = "0.22"
gstreamer-sdp = "0.22"
gstreamer-rtp = "0.22"
gstreamer-app = "0.22"
glib = "0.19"

# URL encoding for RTSP credentials
urlencoding = "2"
